--- a/index.html
+++ b/index.html
@@ -5,10 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="output.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght,YOPQ@100..900,300&display=swap" rel="stylesheet">
 </head>
-<body>
-    <h1 class="text-3xl font-bold underline text-blue-500 text-center">
-        Hello World!
-    </h1>
+<body style="font-family: Kumbh Sans;">
+    <div class="navbar flex flex-row font-light py-6 lg:px-40 md:px-10 px-4 items-center">
+        <div class="flex items-center me-2">
+            <button id="hamburger" class="lg:hidden mx-1">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+                    d="M4 6h16M4 12h16M4 18h16" />
+                </svg>
+            </button>
+        </div>
+
+        <div><img style="height: 18px;" src="ecommerce-product-page-main/images/logo.svg" alt=""></div>
+        <div class="flex-row mx-14 hidden lg:flex gap-8 text-sm text-gray-600">
+            <p>Collections</p>
+            <p>Men</p>
+            <p>Women</p>
+            <p>About</p>
+            <p>Contact</p>
+        </div>
+        <div class="flex flex-row ms-auto items-center justify-between gap-10">
+            <img style="height: 20px;" src="ecommerce-product-page-main/images/icon-cart.svg" alt="">
+            <img style="height: 40px;" src="ecommerce-product-page-main/images/image-avatar.png" alt="">
+        </div>
+    </div>
+    <hr class="border-none h-px bg-gray-200 hidden mx-40 lg:block">
 </body>
 </html>
