--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body style="font-family: Kumbh Sans;">
-    <div class="navbar flex flex-row font-light md:py-6 py-5 px-4 lg:px-40  items-center">
+    <div class="sticky top-0 bg-white z-50 flex flex-row font-light md:py-6 py-5 px-4 lg:px-40 items-center">
         <div class="flex items-center me-2">
             <button id="hamburger" class="lg:hidden mx-1">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -24,13 +24,13 @@
             </button>
         </div>
 
-        <div><img style="height: 18px;" src="ecommerce-product-page-main/images/logo.svg" alt=""></div>
+        <div><a href=""><img style="height: 18px;" src="ecommerce-product-page-main/images/logo.svg" alt=""></a></div>
         <div class="flex-row mx-14 hidden lg:flex gap-8 text-sm text-gray-600">
-            <p>Collections</p>
-            <p>Men</p>
-            <p>Women</p>
-            <p>About</p>
-            <p>Contact</p>
+            <a href=""><p>Collections</p></a>
+            <a href=""><p>Men</p></a>
+            <a href=""><p>Women</p></a>
+            <a href=""><p>About</p></a>
+            <a href=""><p>Contact</p></a>
         </div>
         <div class="flex flex-row ms-auto items-center justify-between md:gap-10 gap-4">
             <img class="h-5" src="ecommerce-product-page-main/images/icon-cart.svg" alt="">
@@ -42,10 +42,10 @@
     <div class="relative w-full mx-auto overflow-hidden md:hidden max-w">
     <!-- Slides -->
         <div id="carousel" class="flex transition-transform duration-300 ease-in-out">
-            <img src="/ecommerce-product-page-main/images/image-product-1.jpg" class="w-full aspect-5/3 object-cover shrink-0" />
-            <img src="/ecommerce-product-page-main/images/image-product-2.jpg" class="w-full aspect-5/3 object-cover shrink-0" />
-            <img src="/ecommerce-product-page-main/images/image-product-3.jpg" class="w-full aspect-5/3 object-cover shrink-0" />
-            <img src="/ecommerce-product-page-main/images/image-product-4.jpg" class="w-full aspect-5/3 object-cover shrink-0" />
+            <img src="/ecommerce-product-page-main/images/image-product-1.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0" />
+            <img src="/ecommerce-product-page-main/images/image-product-2.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0" />
+            <img src="/ecommerce-product-page-main/images/image-product-3.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0" />
+            <img src="/ecommerce-product-page-main/images/image-product-4.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0" />
         </div>
 
     <!-- Left arrow -->
@@ -67,11 +67,22 @@
     <div style="font-family: Figtree;" class="mt-6 mx-6">
         <p class="text-sm font-semibold text-gray-600">SNEAKER COMPANY</p>
         <h1 class="font-bold text-3xl pt-4">Fall Limited Edition Sneakers</h1>
-        <p class="pt-5 text-lg text-gray-600">These low profile sneakers are your perfect casual wear companion. Featuring a durable rubber outer sole, they'll withstand everything the weather can offer.</p>
+        <p class="pt-5 text-lg text-gray-600">These low profile sneakers are your perfect casual wear companion. <br> Featuring a durable rubber outer sole, they'll withstand everything the weather can offer.</p>
 
         <div class="flex pt-6 items-center">
-            <p class="text-4xl font-bold">$125.00 <span class="font-bold text-xl bg-black text-white p-2 rounded">50%</span></p>
+            <p class="text-3xl font-bold items-center">$125.00 <span class="font-bold text-lg bg-black text-white p-2 rounded">50%</span></p>
             <p class="ms-auto text-lg font-bold text-gray-600"><s>$250.00</s></p>
+        </div>
+
+        <div class="flex mx-4 mt-10 items-center justify-between bg-gray-200 rounded-lg p-4 px-3 font-bold">
+            <img src="ecommerce-product-page-main/images/icon-minus.svg" alt="">
+            <p class="font-lg">0</p>
+            <img src="ecommerce-product-page-main/images/icon-plus.svg" alt="">
+        </div>
+
+        <div class="flex items-center justify-center mt-8 bg-orange-500 rounded-lg p-4 mx-4 gap-3 shadow-md shadow-orange-500 mb-6">
+            <img src="/ecommerce-product-page-main/images/icon-cart.svg" alt="">
+            <p class="font-bold">Add to cart</p>
         </div>
     </div>
 
