Finally done with the responsive design for all screen sizes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" type="image/png" href="/ecommerce-product-page-main/images/sneakers.png">
+    <title>JandNadal Online Store</title>
     <link rel="stylesheet" href="output.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +15,7 @@
 </head>
 
 <body style="font-family: Kumbh Sans;">
-    <div class="sticky top-0 bg-white z-50 flex flex-row font-light md:py-6 py-5 px-4 lg:px-40 items-center">
+    <div class="sticky top-0 bg-white z-50 flex flex-row font-light lg:py-6 py-5 px-4 lg:px-40 items-center">
         <div class="flex items-center me-2">
             <button id="hamburger" class="lg:hidden mx-1">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -32,57 +33,61 @@
             <a href=""><p>About</p></a>
             <a href=""><p>Contact</p></a>
         </div>
-        <div class="flex flex-row ms-auto items-center justify-between md:gap-10 gap-4">
+        <div class="flex flex-row ms-auto items-center justify-between lg:gap-10 gap-4">
             <img class="h-5" src="ecommerce-product-page-main/images/icon-cart.svg" alt="">
             <img class="h-6" src="ecommerce-product-page-main/images/image-avatar.png" alt="">
         </div>
     </div>
     <hr class="border-none h-px bg-gray-200 hidden mx-40 lg:block">
 
-    <div class="relative w-full mx-auto overflow-hidden md:hidden max-w">
+    <div class="flex flex-col lg:flex-row lg:mx-40 lg:mt-16 gap-10">
+        <div class="relative w-full mx-auto overflow-hidden lg:overflow-hidden max-w lg:max-w-sm">
     <!-- Slides -->
-        <div id="carousel" class="flex transition-transform duration-300 ease-in-out">
-            <img src="/ecommerce-product-page-main/images/image-product-1.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0" />
-            <img src="/ecommerce-product-page-main/images/image-product-2.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0" />
-            <img src="/ecommerce-product-page-main/images/image-product-3.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0" />
-            <img src="/ecommerce-product-page-main/images/image-product-4.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0" />
-        </div>
+            <div id="carousel" class="flex transition-transform duration-300 ease-in-out">
+                <img src="/ecommerce-product-page-main/images/image-product-1.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0 lg:aspect-4/4 lg:rounded-2xl"  />
+                <img src="/ecommerce-product-page-main/images/image-product-2.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0 lg:aspect-4/4 lg:rounded-2xl" />
+                <img src="/ecommerce-product-page-main/images/image-product-3.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0 lg:aspect-4/4 lg:rounded-2xl" />
+                <img src="/ecommerce-product-page-main/images/image-product-4.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0 lg:aspect-4/4 lg:rounded-2xl" />
+            </div>
 
     <!-- Left arrow -->
-        <button
-            onclick="prevSlide()"
-            class="absolute left-3 top-1/2 -translate-y-1/2 bg-white w-9 h-9 rounded-full shadow flex items-center justify-center">
-            ‹
-        </button>
+            <button
+                onclick="prevSlide()"
+                class="absolute left-3 top-1/2 -translate-y-1/2 bg-white w-9 h-9 rounded-full shadow flex items-center justify-center lg:hidden">
+                ‹
+            </button>
 
   <!-- Right arrow -->
-        <button
-            onclick="nextSlide()"
-            class="absolute right-3 top-1/2 -translate-y-1/2 bg-white w-9 h-9 rounded-full shadow flex items-center justify-center"
-        >
-            ›
-        </button>
-    </div>
-
-    <div style="font-family: Figtree;" class="mt-6 mx-6">
-        <p class="text-sm font-semibold text-gray-600">SNEAKER COMPANY</p>
-        <h1 class="font-bold text-3xl pt-4">Fall Limited Edition Sneakers</h1>
-        <p class="pt-5 text-lg text-gray-600">These low profile sneakers are your perfect casual wear companion. <br> Featuring a durable rubber outer sole, they'll withstand everything the weather can offer.</p>
-
-        <div class="flex pt-6 items-center">
-            <p class="text-3xl font-bold items-center">$125.00 <span class="font-bold text-lg bg-black text-white p-2 rounded">50%</span></p>
-            <p class="ms-auto text-lg font-bold text-gray-600"><s>$250.00</s></p>
+            <button
+                onclick="nextSlide()"
+                class="absolute right-3 top-1/2 -translate-y-1/2 bg-white w-9 h-9 rounded-full shadow flex items-center justify-center lg:hidden"
+            >
+                ›
+            </button>
         </div>
 
-        <div class="flex mx-4 mt-10 items-center justify-between bg-gray-200 rounded-lg p-4 px-3 font-bold">
-            <img src="ecommerce-product-page-main/images/icon-minus.svg" alt="">
-            <p class="font-lg">0</p>
-            <img src="ecommerce-product-page-main/images/icon-plus.svg" alt="">
-        </div>
+        <div style="font-family: Figtree;" class="mt-6 mx-6 lg:max-w-sm">
+            <p class="text-sm font-semibold text-gray-600">SNEAKER COMPANY</p>
+            <h1 class="font-bold text-3xl pt-4 lg:text-4xl">Fall Limited Edition Sneakers</h1>
+            <p class="pt-5 text-md text-gray-600 lg:text-sm">These low profile sneakers are your perfect casual wear companion. Featuring a durable rubber outer sole, they'll withstand everything the weather can offer.</p>
 
-        <div class="flex items-center justify-center mt-8 bg-orange-500 rounded-lg p-4 mx-4 gap-3 shadow-md shadow-orange-500 mb-6">
-            <img src="/ecommerce-product-page-main/images/icon-cart.svg" alt="">
-            <p class="font-bold">Add to cart</p>
+            <div class="flex pt-6 items-center justify-between md:flex-col md:justify-start md:items-start">
+                <p class="text-3xl font-bold items-center md:ms-0 md:text-2xl">$125.00 <span class="font-bold text-lg bg-black text-white p-2 rounded md:text-xs md:p-1">50%</span></p>
+                <p class="text-lg font-bold text-gray-600 lg:ms-0 lg:text-sm lg:mt-2"><s>$250.00</s></p>
+            </div>
+
+            <div class="flex flex-col lg:flex-row lg:justify-between lg:items-center lg:mt-5">
+                <div class="flex mx-4 mt-10 items-center justify-between bg-gray-200 rounded-lg px-4 py-2 font-bold lg:gap-9 lg:mx-0 lg:mt-0">
+                    <img id="minusBtn" src="ecommerce-product-page-main/images/icon-minus.svg" alt="">
+                    <p id="orderAmt" class="font-lg">0</p>
+                    <img id="plusBtn" src="ecommerce-product-page-main/images/icon-plus.svg" alt="">
+                </div>
+
+                <div id="cart" class="flex items-center justify-center mt-8 bg-orange-500 rounded-lg p-4 mx-4 gap-3 shadow-md shadow-orange-500 mb-6 lg:m-0 lg:py-3 lg:px-13">
+                    <img class="h-4" src="/ecommerce-product-page-main/images/icon-cart.svg" alt="">
+                    <p class="font-bold text-sm">Add to cart</p>
+                </div>
+            </div>
         </div>
     </div>
 
