--- a/index.html
+++ b/index.html
@@ -34,8 +34,18 @@
             <a href=""><p>Contact</p></a>
         </div>
         <div class="flex flex-row ms-auto items-center justify-between lg:gap-10 gap-4">
-            <img class="h-5" src="ecommerce-product-page-main/images/icon-cart.svg" alt="">
+            <img id="cart" class="h-5" src="ecommerce-product-page-main/images/icon-cart.svg" alt="">
             <img class="h-6" src="ecommerce-product-page-main/images/image-avatar.png" alt="">
+        </div>
+    </div>
+
+    <div id="cartContent" class="hidden w-screen absolute z-50 mt-2 lg:justify-end  lg:right-50">
+        <div class="mx-4 sm: bg-white rounded-md pt-4 font-bold lg:w-80 shadow-lg">
+            <p class="pb-3 px-6 ">Cart</p>
+            <hr class="border border-gray-100">
+            <div class="h-40 lg:h-40 md:h-80 flex items-center justify-center">
+                <p  id="cartView" class="text-sm text-gray-400">Your cart is empty.</p>
+            </div>
         </div>
     </div>
 
@@ -112,7 +122,7 @@
                     <img id="plusBtn" src="ecommerce-product-page-main/images/icon-plus.svg" alt="">
                 </div>
 
-                <div id="cart" class="flex items-center justify-center mt-8 bg-orange-500 rounded-lg p-4 mx-4 gap-3 shadow-md shadow-orange-500 mb-6 lg:m-0 lg:py-3 lg:px-13">
+                <div id="addToCart" class="flex items-center justify-center mt-8 bg-orange-500 rounded-lg p-4 mx-4 gap-3 shadow-sm shadow-orange-500 mb-6 lg:m-0 lg:py-3 lg:px-13">
                     <img class="h-4" src="/ecommerce-product-page-main/images/icon-cart.svg" alt="">
                     <p class="font-bold text-sm">Add to cart</p>
                 </div>
