--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
 
     <div id="cartContent" class="hidden w-screen absolute z-50 mt-2 lg:justify-end  lg:right-50">
         <div class="mx-4 sm: bg-white rounded-md pt-4 font-bold lg:w-80 shadow-lg">
-            <p class="pb-3 px-6 ">Cart</p>
+            <div class="flex flex-row justify-between">
+                <p class="pb-3 px-6 ">Cart</p>
+                <p id="cartClose" class="font-bold pe-6">X</p>
+            </div>
             <hr class="border border-gray-100">
-            <div class="h-40 lg:h-40 md:h-80 flex items-center justify-center">
-                <p  id="cartView" class="text-sm text-gray-400">Your cart is empty.</p>
+            <div id="cartContainer" class="h-40 lg:h-40 md:h-80 flex items-center justify-center">
+                <p id="cartView" class="text-sm text-gray-400">Your cart is empty.</p>
             </div>
         </div>
     </div>
@@ -85,16 +88,15 @@
     <!-- Left arrow -->
             <button
                 onclick="prevSlide()"
-                class="absolute left-3 top-1/2 -translate-y-1/2 bg-white w-9 h-9 rounded-full shadow flex items-center justify-center lg:hidden">
-                ‹
+                class="absolute left-3 top-1/2 -translate-y-1/2 bg-white w-9 h-9 rounded-full shadow text-xl font-bold flex items-center justify-center lg:hidden">
+                <img src="/ecommerce-product-page-main/images/icon-previous.svg" alt="">
             </button>
 
   <!-- Right arrow -->
             <button
                 onclick="nextSlide()"
-                class="absolute right-3 top-1/2 -translate-y-1/2 bg-white w-9 h-9 rounded-full shadow flex items-center justify-center lg:hidden"
-            >
-                ›
+                class="absolute right-3 top-1/2 -translate-y-1/2 bg-white w-9 h-9 rounded-full shadow text-xl font-bold flex items-center justify-center lg:hidden">
+                <img src="/ecommerce-product-page-main/images/icon-next.svg" alt="">
             </button>
 
             <div class="lg:flex-row lg:flex pt-6 justify-between hidden mx-2">
@@ -129,7 +131,7 @@
             </div>
         </div>
     </div>
-
+    
     <script src="script.js"></script>
 </body>
 </html>
