finally fixed the cart view problem

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                 <img id="cart" class="h-5" src="ecommerce-product-page-main/images/icon-cart.svg" alt="">
                 <span id="notisBadge" class="hidden bg-orange-500 text-white font-bold rounded-lg px-2 badge text-xs z-40 absolute left-2 bottom-3"></span>
             </div>
-            <img class="h-6 hover:border-2 border-orange-500 rounded-xl" src="ecommerce-product-page-main/images/image-avatar.png" alt="">
+            <img class="h-6 hover:border border-orange-500 rounded-xl" src="ecommerce-product-page-main/images/image-avatar.png" alt="">
         </div>
     </div>
 
     <div id="cartContent" class="hidden w-screen absolute z-50 mt-2 lg:justify-end  lg:right-50">
-        <div class="mx-4 sm: bg-white rounded-md pt-4 font-bold lg:w-80 shadow-lg">
+        <div class="mx-4 sm: bg-white w-full rounded-md pt-4 font-bold lg:w-80 shadow-lg">
             <div class="flex flex-row justify-between">
                 <p class="pb-3 px-6 ">Cart</p>
                 <button id="cartClose" class="font-bold pe-6">X</button>
@@ -82,31 +82,31 @@
         <div class="relative w-full mx-auto overflow-hidden lg:overflow-hidden max-w lg:max-w-sm lg:w-auto lg:mx-0">
     <!-- Slides -->
             <div id="carousel" class="flex transition-transform duration-300 ease-in-out">
-                <img src="./ecommerce-product-page-main/images/image-product-1.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0 lg:aspect-4/4 lg:rounded-2xl"  />
-                <img src="./ecommerce-product-page-main/images/image-product-2.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0 lg:aspect-4/4 lg:rounded-2xl" />
-                <img src="./ecommerce-product-page-main/images/image-product-3.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0 lg:aspect-4/4 lg:rounded-2xl" />
-                <img src="./ecommerce-product-page-main/images/image-product-4.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0 lg:aspect-4/4 lg:rounded-2xl" />
+                <img src="/ecommerce-product-page-main/images/image-product-1.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0 lg:aspect-4/4 lg:rounded-2xl"  />
+                <img src="/ecommerce-product-page-main/images/image-product-2.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0 lg:aspect-4/4 lg:rounded-2xl" />
+                <img src="/ecommerce-product-page-main/images/image-product-3.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0 lg:aspect-4/4 lg:rounded-2xl" />
+                <img src="/ecommerce-product-page-main/images/image-product-4.jpg" class="w-full h-full aspect-5/3 object-cover shrink-0 lg:aspect-4/4 lg:rounded-2xl" />
             </div>
 
     <!-- Left arrow -->
             <button
                 onclick="prevSlide()"
                 class="absolute left-3 top-1/2 -translate-y-1/2 bg-white w-9 h-9 rounded-full shadow text-xl font-bold flex items-center justify-center lg:hidden">
-                <img src="./ecommerce-product-page-main/images/icon-previous.svg" alt="">
+                <img src="/ecommerce-product-page-main/images/icon-previous.svg" alt="">
             </button>
 
   <!-- Right arrow -->
             <button
                 onclick="nextSlide()"
                 class="absolute right-3 top-1/2 -translate-y-1/2 bg-white w-9 h-9 rounded-full shadow text-xl font-bold flex items-center justify-center lg:hidden">
-                <img src="./ecommerce-product-page-main/images/icon-next.svg" alt="">
+                <img src="/ecommerce-product-page-main/images/icon-next.svg" alt="">
             </button>
 
             <div class="lg:flex-row lg:flex pt-6 justify-between hidden mx-2">
-                <img id="thumbnailOne" class="cursor-pointer h-19 rounded-lg hover:opacity-60" src="./ecommerce-product-page-main/images/image-product-1-thumbnail.jpg" alt="">
-                <img id="thumbnailTwo" class="cursor-pointer h-19 rounded-lg hover:opacity-60" src="./ecommerce-product-page-main/images/image-product-2-thumbnail.jpg" alt="">
-                <img id="thumbnailThree" class="cursor-pointer h-19 rounded-lg hover:opacity-60" src="./ecommerce-product-page-main/images/image-product-3-thumbnail.jpg" alt="">
-                <img id="thumbnailFour" class="cursor-pointer h-19 rounded-lg hover:opacity-60" src="./ecommerce-product-page-main/images/image-product-4-thumbnail.jpg" alt="">
+                <img id="thumbnailOne" class="cursor-pointer h-19 rounded-lg hover:opacity-60" src="/ecommerce-product-page-main/images/image-product-1-thumbnail.jpg" alt="">
+                <img id="thumbnailTwo" class="cursor-pointer h-19 rounded-lg hover:opacity-60" src="/ecommerce-product-page-main/images/image-product-2-thumbnail.jpg" alt="">
+                <img id="thumbnailThree" class="cursor-pointer h-19 rounded-lg hover:opacity-60" src="/ecommerce-product-page-main/images/image-product-3-thumbnail.jpg" alt="">
+                <img id="thumbnailFour" class="cursor-pointer h-19 rounded-lg hover:opacity-60" src="/ecommerce-product-page-main/images/image-product-4-thumbnail.jpg" alt="">
             </div>
         </div>
 
@@ -128,7 +128,7 @@
                 </div>
 
                 <div id="addToCart" class="flex items-center justify-center mt-8 bg-orange-500 rounded-lg p-4 mx-4 gap-3 shadow-sm shadow-orange-500 mb-6 lg:m-0 lg:py-3 lg:px-13">
-                    <img class="h-4" src="./ecommerce-product-page-main/images/icon-cart.svg" alt="">
+                    <img class="h-4" src="/ecommerce-product-page-main/images/icon-cart.svg" alt="">
                     <p class="font-bold text-sm">Add to cart</p>
                 </div>
             </div>
